[package]
name = "tardis-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "std"], default-features = true}
libc = "0.2.141"
linux-personality = "1.0.0"
log = "0.4.17"
nix = "0.26.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
